--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -73,7 +73,13 @@
 # https://drupal.org/SA-CORE-2017-004   CVE-2017-6923   8.3.7
 # https://drupal.org/SA-CORE-2017-004   CVE-2017-6924   8.3.7
 # https://drupal.org/SA-CORE-2017-004   CVE-2017-6925   8.3.7
-# https://drupal.org/SA-CORE-2018-001   TODO (not available yet) 8.4.5/7.57
+# https://drupal.org/SA-CORE-2018-001   CVE-2017-6926   8.4.5/7.57
+# https://drupal.org/SA-CORE-2018-001   CVE-2017-6927   8.4.5/7.57
+# https://drupal.org/SA-CORE-2018-001   CVE-2017-6928   8.4.5/7.57
+# https://drupal.org/SA-CORE-2018-001   CVE-2017-6929   8.4.5/7.57
+# https://drupal.org/SA-CORE-2018-001   CVE-2017-6930   8.4.5/7.57
+# https://drupal.org/SA-CORE-2018-001   CVE-2017-6931   8.4.5/7.57
+# https://drupal.org/SA-CORE-2018-001   CVE-2017-6932   8.4.5/7.57
 # https://drupal.org/SA-CORE-2018-002   CVE-2018-7600   8.5.1/7.58
 # https://drupal.org/SA-CORE-2018-003   TODO            8.5.2/8.4.7
 # https://drupal.org/SA-CORE-2018-004   CVE-2018-7602   8.5.3/8.4.8/7.59
