--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -519,12 +519,13 @@ WordPress plugin cool-video-gallery:
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2015-8351 1.5.4 https://www.htbridge.com/advisory/HTB23275
+# OVE-20160712-0033 2.1.1 https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_gwolle_guestbook_wordpress_plugin.html
 WordPress plugin gwolle-gb:
   1:
     location: ['/wp-content/plugins/gwolle-gb/readme.txt']
-    secure_version: '2.1.1'
+    secure_version: '2.5.4'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'OVE-20160712-0033 https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_gwolle_guestbook_wordpress_plugin.html'
+    cve: 'http://seclists.org/bugtraq/2018/Jul/74 http://www.defensecode.com/advisories/DC-2018-05-008_WordPress_Gwolle_Guestbook_Plugin_Advisory.pdf'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin role-scoper:
