--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2551,9 +2551,9 @@ WordPress plugin easy-modal:
 WordPress plugin snazzy-maps:
   1:
     location: ['/wp-content/plugins/snazzy-maps/readme.txt']
-    secure_version: 'N/A'
+    secure_version: '1.1.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://seclists.org/bugtraq/2018/Jul/72 http://www.defensecode.com/advisories/DC-2018-05-006_WordPress_Snazzy_Maps_Plugin_Advisory.pdf'  # TODO: Notified plugins team and requested CVE 2018-07-29
+    cve: 'http://seclists.org/bugtraq/2018/Jul/72 http://www.defensecode.com/advisories/DC-2018-05-006_WordPress_Snazzy_Maps_Plugin_Advisory.pdf'  # TODO: CVE requested 2018-07-29
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin strong-testimonials:
