--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2564,3 +2564,11 @@ WordPress plugin strong-testimonials:
     cve: 'http://seclists.org/bugtraq/2018/Jul/75 http://www.defensecode.com/advisories/DC-2018-05-007_WordPress_Strong_Testimonials_Plugin_Advisory.pdf'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin form-maker:
+  1:
+    location: ['/wp-content/plugins/form-maker/readme.txt']
+    secure_version: '1.12.26'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://seclists.org/bugtraq/2018/Jun/20 http://www.defensecode.com/advisories/DC-2018-05-004_WordPress_Contact_Form_Maker_Plugin_Advisory.pdf'  # TODO: No CVE
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
