--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2572,3 +2572,11 @@ WordPress plugin form-maker:
     cve: 'http://seclists.org/bugtraq/2018/Jun/20 http://www.defensecode.com/advisories/DC-2018-05-001_WordPress_Form_Maker_Plugin_Advisory.pdf'  # TODO: No CVE
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wordpress-mobile-pack:
+  1:
+    location: ['/wp-content/plugins/wordpress-mobile-pack/readme.txt']
+    secure_version: '2.1.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://seclists.org/fulldisclosure/2015/Jul/97'  # TODO: CVE requested 2018-10-01 with ID 577499
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
