--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -525,7 +525,9 @@ WordPress plugin gwolle-gb:
     location: ['/wp-content/plugins/gwolle-gb/readme.txt']
     secure_version: '2.5.4'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://seclists.org/bugtraq/2018/Jul/74 http://www.defensecode.com/advisories/DC-2018-05-008_WordPress_Gwolle_Guestbook_Plugin_Advisory.pdf'  # TODO: CVE requested 2018-07-29
+    # TODO: CVE requested 2018-07-29
+    # TODO: CVE re-requested 2018-10-2
+    cve: 'http://seclists.org/bugtraq/2018/Jul/74 http://www.defensecode.com/advisories/DC-2018-05-008_WordPress_Gwolle_Guestbook_Plugin_Advisory.pdf'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin role-scoper:
@@ -2033,9 +2035,10 @@ WordPress plugin global-content-blocks:
 WordPress plugin slideshow-gallery:
   1:
     location: ['/wp-content/plugins/slideshow-gallery/readme.txt']
-    secure_version: '1.6.6'  # TODO: CVE missing
+    secure_version: '1.6.6'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://wordpress.org/plugins/slideshow-gallery/#developers'
+    # TODO: CVE requested 2018-10-02
+    cve: 'http://www.defensecode.com/advisories/DC-2017-01-014_WordPress_Tribulant_Slideshow_Gallery_Plugin_Advisory.pdf'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin Magic-Fields:
