--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2554,7 +2554,8 @@ WordPress plugin snazzy-maps:
     location: ['/wp-content/plugins/snazzy-maps/readme.txt']
     secure_version: '1.1.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://seclists.org/bugtraq/2018/Jul/72 http://www.defensecode.com/advisories/DC-2018-05-006_WordPress_Snazzy_Maps_Plugin_Advisory.pdf'  # TODO: CVE requested 2018-07-29
+    # TODO: CVE requested 2018-10-02 (2018-07-29 request was lost in the void)
+    cve: 'http://seclists.org/bugtraq/2018/Jul/72 http://www.defensecode.com/advisories/DC-2018-05-006_WordPress_Snazzy_Maps_Plugin_Advisory.pdf'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin strong-testimonials:
