--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -5,7 +5,7 @@ WordPress plugin videowhisper-video-conference-integration:
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     # TODO: CVE requested 2018-10-04
-    cve: 'http://www.openwall.com/lists/oss-security/2015/04/01/3 http://www.vapid.dhs.org/advisory.php?v=116'
+    cve: 'https://www.openwall.com/lists/oss-security/2015/04/01/3 http://www.vapid.dhs.org/advisory.php?v=116'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin videowhisper-video-presentation:
@@ -13,11 +13,11 @@ WordPress plugin videowhisper-video-presentation:
     location: ['/wp-content/plugins/videowhisper-video-presentation/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://www.openwall.com/lists/oss-security/2015/04/01/2'
+    cve: 'https://www.openwall.com/lists/oss-security/2015/04/01/2'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2008-0520 1.4.4 http://www.exploit-db.com/exploits/5017/
-# CVE-2009-XXXX 1.7.2.1 http://www.openwall.com/lists/oss-security/2015/04/06/1
+# CVE-2009-XXXX 1.7.2.1 https://www.openwall.com/lists/oss-security/2015/04/06/1
 # CVE-2012-263 1.8.3.1
 WordPress plugin wassup:
   1:
@@ -30,8 +30,8 @@ WordPress plugin wassup:
 # CVE-2012-4263 better-wp-security 3.2.5
 # CVE-2012-4264 better-wp-security 3.2.5
 # N/A           better-wp-security N/A      http://packetstormsecurity.com/files/125219/
-# CVE-2016-XXXX better-wp-security 5.3.1 http://www.openwall.com/lists/oss-security/2016/04/21/2
-# CVE-2016-XXXX better-wp-security 5.3.1 http://www.openwall.com/lists/oss-security/2016/04/21/3
+# CVE-2016-XXXX better-wp-security 5.3.1 https://www.openwall.com/lists/oss-security/2016/04/21/2
+# CVE-2016-XXXX better-wp-security 5.3.1 https://www.openwall.com/lists/oss-security/2016/04/21/3
 WordPress plugin better-wp-security:
   1:
     location: ['/wp-content/plugins/better-wp-security/readme.txt']
@@ -52,7 +52,7 @@ WordPress plugin cart66-lite:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2014-9442 https://nvd.nist.gov/vuln/detail/CVE-2014-9461'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
-# http://www.exploit-db.com/exploits/36576/ 2.5.4 CVE request http://www.openwall.com/lists/oss-security/2015/07/16/6
+# http://www.exploit-db.com/exploits/36576/ 2.5.4 CVE request https://www.openwall.com/lists/oss-security/2015/07/16/6
 WordPress plugin sp-client-document-manager:
   1:
     location: ['/wp-content/plugins/sp-client-document-manager/readme.txt']
@@ -66,7 +66,7 @@ WordPress plugin floating-social-bar:
     location: ['/wp-content/plugins/floating-social-bar/readme.txt']
     secure_version: '1.1.7'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://www.openwall.com/lists/oss-security/2015/04/11/9'
+    cve: 'https://www.openwall.com/lists/oss-security/2015/04/11/9'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin citizen-space:
@@ -266,7 +266,7 @@ WordPress plugin cp-contact-form-with-paypal:
     location: ['/wp-content/plugins/cp-contact-form-with-paypal/README.txt']
     secure_version: '1.1.6'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-9233 https://nvd.nist.gov/vuln/detail/CVE-2015-9234 http://seclists.org/fulldisclosure/2015/Jul/49 http://www.openwall.com/lists/oss-security/2015/07/11/2'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-9233 https://nvd.nist.gov/vuln/detail/CVE-2015-9234 http://seclists.org/fulldisclosure/2015/Jul/49 https://www.openwall.com/lists/oss-security/2015/07/11/2'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wp-slimstat:
@@ -274,7 +274,7 @@ WordPress plugin wp-slimstat:
     location: ['/wp-content/plugins/wp-slimstat/readme.txt']
     secure_version: '4.1.6.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://www.openwall.com/lists/oss-security/2015/07/30/1'  # CVE request http://www.openwall.com/lists/oss-security/2015/07/30/1
+    cve: 'https://www.openwall.com/lists/oss-security/2015/07/30/1'  # CVE request https://www.openwall.com/lists/oss-security/2015/07/30/1
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin the-holiday-calendar:
@@ -322,7 +322,7 @@ WordPress plugin mdc-private-message:
     cve: 'https://www.exploit-db.com/exploits/37907/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
-# CVE-2015-4697 6.4.9.4 http://seclists.org/fulldisclosure/2015/Jun/57 http://www.openwall.com/lists/oss-security/2015/06/20/1
+# CVE-2015-4697 6.4.9.4 http://seclists.org/fulldisclosure/2015/Jun/57 https://www.openwall.com/lists/oss-security/2015/06/20/1
 WordPress plugin google-analyticator:
   1:
     location: ['/wp-content/plugins/google-analyticator/readme.txt']
@@ -336,7 +336,7 @@ WordPress plugin dukapress:
     location: ['/wp-content/plugins/dukapress/readme.txt']
     secure_version: '2.5.9.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-1000011 http://www.vapidlabs.com/advisory.php?v=152 http://www.openwall.com/lists/oss-security/2015/08/22/2'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-1000011 http://www.vapidlabs.com/advisory.php?v=152 https://www.openwall.com/lists/oss-security/2015/08/22/2'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin youtube-embed:
@@ -458,7 +458,7 @@ WordPress plugin powerpress:
     location: ['/wp-content/plugins/powerpress/readme.txt']
     secure_version: '6.0.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://www.openwall.com/lists/oss-security/2015/10/27/1'  # CVE request 2015-10-27
+    cve: 'https://www.openwall.com/lists/oss-security/2015/10/27/1'  # CVE request 2015-10-27
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin si-contact-form:
@@ -466,7 +466,7 @@ WordPress plugin si-contact-form:
     location: ['/wp-content/plugins/si-contact-form/readme.txt']
     secure_version: '4.0.38'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://www.openwall.com/lists/oss-security/2015/10/27/2'  # CVE request 2015-10-27
+    cve: 'https://www.openwall.com/lists/oss-security/2015/10/27/2'  # CVE request 2015-10-27
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2015-5482 https://security.dxw.com/advisories/local-file-include-vulnerability-in-gd-bbpress-attachments-allows-attackers-to-include-arbitrary-php-files/
@@ -559,7 +559,7 @@ WordPress plugin wp-symposium-pro:
     location: ['/wp-content/plugins/wp-symposium-pro/readme.txt']
     secure_version: '16.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://seclists.org/bugtraq/2016/Jan/26'  # CVE request http://www.openwall.com/lists/oss-security/2016/01/07/5
+    cve: 'http://seclists.org/bugtraq/2016/Jan/26'  # CVE request https://www.openwall.com/lists/oss-security/2016/01/07/5
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # https://github.com/cybersecurityworks/Disclosed/issues/9 asked status of CVE via email 2016-01-08
@@ -576,7 +576,7 @@ WordPress plugin wp-easy-gallery:
     location: ['/wp-content/plugins/wp-easy-gallery/readme.txt']
     secure_version: '4.1.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://www.openwall.com/lists/oss-security/2016/01/26/4'  # CVE request
+    cve: 'https://www.openwall.com/lists/oss-security/2016/01/26/4'  # CVE request
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2015-3421
@@ -585,7 +585,7 @@ WordPress plugin eshop:
     location: ['/wp-content/plugins/eshop/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-0765 https://nvd.nist.gov/vuln/detail/CVE-2016-0769 http://www.openwall.com/lists/oss-security/2016/02/02/3'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-0765 https://nvd.nist.gov/vuln/detail/CVE-2016-0769 https://www.openwall.com/lists/oss-security/2016/02/02/3'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin connections:
@@ -697,7 +697,7 @@ WordPress plugin wp-super-cache:
     location: ['/wp-content/plugins/wp-super-cache/readme.txt']
     secure_version: '1.4.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://www.openwall.com/lists/oss-security/2015/04/05/1'  # CVE request
+    cve: 'https://www.openwall.com/lists/oss-security/2015/04/05/1'  # CVE request
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin soundy-background-music:
@@ -869,7 +869,7 @@ WordPress plugin enhanced-tooltipglossary:
     location: ['/wp-content/plugins/enhanced-tooltipglossary/readme.txt']
     secure_version: '3.3.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-1000132 http://www.vapidlabs.com/wp/wp_advisory.php?v=37 DWF-2016-77246 http://www.openwall.com/lists/oss-security/2016/05/11/12'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-1000132 http://www.vapidlabs.com/wp/wp_advisory.php?v=37 DWF-2016-77246 https://www.openwall.com/lists/oss-security/2016/05/11/12'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin tera-charts:
@@ -877,7 +877,7 @@ WordPress plugin tera-charts:
     location: ['/wp-content/plugins/tera-charts/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-1000151 http://www.vapidlabs.com/wp/wp_advisory.php?v=455 DWF-2016-77716 http://www.openwall.com/lists/oss-security/2016/05/11/12'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-1000151 http://www.vapidlabs.com/wp/wp_advisory.php?v=455 DWF-2016-77716 https://www.openwall.com/lists/oss-security/2016/05/11/12'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin pondol-carousel:
@@ -885,7 +885,7 @@ WordPress plugin pondol-carousel:
     location: ['/wp-content/plugins/pondol-carousel/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-1000145 http://www.vapidlabs.com/wp/wp_advisory.php?v=524 DWF-2016-77531 http://www.openwall.com/lists/oss-security/2016/05/11/12'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-1000145 http://www.vapidlabs.com/wp/wp_advisory.php?v=524 DWF-2016-77531 https://www.openwall.com/lists/oss-security/2016/05/11/12'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2016-10706 4.0.3 https://www.wordfence.com/blog/2016/05/jetpack-vulnerability/ https://jetpack.com/2016/05/27/jetpack-4-0-3-critical-security-update/
@@ -1103,7 +1103,7 @@ WordPress plugin xcloner-backup-and-restore:
     location: ['/wp-content/plugins/xcloner-backup-and-restore/readme.txt']
     secure_version: '3.1.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://www.openwall.com/lists/oss-security/2016/07/27/2'
+    cve: 'https://www.openwall.com/lists/oss-security/2016/07/27/2'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin lazy-load:
@@ -1369,7 +1369,7 @@ WordPress plugin candidate-application-form:
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2015-1000000 1.100 http://www.vapidlabs.com/advisory.php?v=138
-# CVE-2016-1000156 N/A http://www.vapidlabs.com/advisory.php?v=175 http://www.openwall.com/lists/oss-security/2016/11/08/4
+# CVE-2016-1000156 N/A http://www.vapidlabs.com/advisory.php?v=175 https://www.openwall.com/lists/oss-security/2016/11/08/4
 WordPress plugin mailcwp:
   1:
     location: ['/wp-content/plugins/mailcwp/readme.txt']
@@ -1544,7 +1544,7 @@ WordPress plugin bp-code-snippets:
     location: ['/wp-content/plugins/bp-code-snippets/readme.txt']
     secure_version: '2.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2013-1808 http://www.openwall.com/lists/oss-security/2013/03/26/8'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2013-1808 https://www.openwall.com/lists/oss-security/2013/03/26/8'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin cleeng:
@@ -1552,7 +1552,7 @@ WordPress plugin cleeng:
     location: ['/wp-content/plugins/cleeng/readme.txt']
     secure_version: '2.3.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2013-1808 http://www.openwall.com/lists/oss-security/2013/03/26/8'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2013-1808 https://www.openwall.com/lists/oss-security/2013/03/26/8'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin paypal-digital-goods-monetization-powered-by-cleeng:
@@ -1560,7 +1560,7 @@ WordPress plugin paypal-digital-goods-monetization-powered-by-cleeng:
     location: ['/wp-content/plugins/paypal-digital-goods-monetization-powered-by-cleeng/readme.txt']
     secure_version: '2.2.14'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2013-1808 http://www.openwall.com/lists/oss-security/2013/03/26/8'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2013-1808 https://www.openwall.com/lists/oss-security/2013/03/26/8'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin tiny-url:
@@ -1568,7 +1568,7 @@ WordPress plugin tiny-url:
     location: ['/wp-content/plugins/tiny-url/readme.txt']
     secure_version: '1.3.4'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2013-1808 http://www.openwall.com/lists/oss-security/2013/03/26/8'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2013-1808 https://www.openwall.com/lists/oss-security/2013/03/26/8'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wp-clone-by-wp-academy:
@@ -1576,7 +1576,7 @@ WordPress plugin wp-clone-by-wp-academy:
     location: ['/wp-content/plugins/wp-clone-by-wp-academy/readme.txt']
     secure_version: '2.1.2'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2013-1808 http://www.openwall.com/lists/oss-security/2013/03/26/8'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2013-1808 https://www.openwall.com/lists/oss-security/2013/03/26/8'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin question-and-answer-forum:
@@ -2353,7 +2353,7 @@ WordPress plugin rk-responsive-contact-form:
     location: ['/wp-content/plugins/rk-responsive-contact-form/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-1002027 http://www.vapidlabs.com/advisory.php?v=198 http://www.openwall.com/lists/oss-security/2017/08/23/3'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-1002027 http://www.vapidlabs.com/advisory.php?v=198 https://www.openwall.com/lists/oss-security/2017/08/23/3'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin gallery-bank:
