--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2581,3 +2581,11 @@ WordPress plugin wordpress-mobile-pack:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-9269 https://seclists.org/fulldisclosure/2015/Jul/97 https://www.openwall.com/lists/oss-security/2015/07/19/1'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-db-backup:
+  1:
+    location: ['/wp-content/plugins/wp-db-backup/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://www.vapidlabs.com/advisory.php?v=81'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
