--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: python
 python:
   - '3.5'
 install: 'pip install -r requirements.lst'
+before_install: "sudo apt-get install -y python3-yaml python3-docopt"
 before_script: "sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm"
-script: python tests.py
+script: python3 tests.py
 notifications:
   email:
      - henri@nerv.fi
