--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1162,6 +1162,7 @@ WordPress plugin all-in-one-wp-security-and-firewall:
     cve: 'OVE-20160731-0003 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_all_in_one_wp_security___firewall_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2018-19564 TODO https://www.exploit-db.com/exploits/45900
 WordPress plugin easy-testimonials:
   1:
     location: ['/wp-content/plugins/easy-testimonials/readme.txt']
@@ -2615,5 +2616,13 @@ WordPress plugin wp-gdpr-compliance:
     secure_version: '1.4.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-19207 https://www.wordfence.com/blog/2018/11/trends-following-vulnerability-in-wp-gdpr-compliance-plugin/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress plugin deans-fckeditor-with-pwwangs-code-plugin-for-wordpress:
+  1:
+    location: ['/wp-content/plugins/deans-fckeditor-with-pwwangs-code-plugin-for-wordpress/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://packetstormsecurity.com/files/111319/WordPress-Deans-With-Pwwangs-Code-Shell-Upload.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
