--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -224,18 +224,19 @@
 # CVE-2018-14028 N/A https://core.trac.wordpress.org/ticket/44710 https://rastating.github.io/unrestricted-file-upload-via-plugin-uploader-in-wordpress/
 # CVE-2017-1000600 TODO http://www.securityfocus.com/bid/105305 https://www.theregister.co.uk/2018/08/20/php_unserialisation_wordpress_vuln/
 # CVE-2018-1000773 TODO https://0day.city/wordpress-4-9-8-cve-2018-1000773-remote-code-execution.html https://www.theregister.co.uk/2018/08/20/php_unserialisation_wordpress_vuln/ https://www.securityfocus.com/bid/105306
+# TODO 5.0.1 https://wordpress.org/news/2018/12/wordpress-5-0-1-security-release/
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
-    secure_version: '4.9.7'
+    secure_version: '5.0.1'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-12895 https://wordpress.org/news/2018/07/wordpress-4-9-7-security-and-maintenance-release/'
+    cve: 'https://wordpress.org/news/2018/12/wordpress-5-0-1-security-release/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
     secure_version: '4.9.7'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-12895 https://wordpress.org/news/2018/07/wordpress-4-9-7-security-and-maintenance-release/'
+    cve: 'https://wordpress.org/news/2018/12/wordpress-5-0-1-security-release/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
