--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1319,7 +1319,7 @@ WordPress plugin wp-maintenance-mode:
     location: ['/wp-content/plugins/wp-maintenance-mode/readme.txt']
     secure_version: '2.0.7'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2016/07/3-vulnerabilities-wp-maintenance-mode/'
+    cve: 'https://www.wordfence.com/blog/2016/07/3-vulnerabilities-wp-maintenance-mode/'  # TODO: CVE requested 2018-12-14
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin zotpress:
