--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2643,3 +2643,11 @@ WordPress plugin social-pug:
     cve: 'https://advisories.dxw.com/advisories/reflected-xss-in-social-pug-easy-social-share-buttons-could-allow-an-attacker-to-do-almost-anything-an-admin-user-can/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin mapsvg-lite-interactive-vector-maps:
+  1:
+    location: ['/wp-content/plugins/mapsvg-lite-interactive-vector-maps/readme.txt']
+    secure_version: '3.3.0'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://advisories.dxw.com/advisories/csrf-mapsvg-lite/'  # TODO: CVE was requested 2019-01-08 by DXW
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
