--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2657,6 +2657,6 @@ WordPress plugin forminator:
     location: ['/wp-content/plugins/forminator/readme.txt']
     secure_version: '1.6'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://security-consulting.icu/blog/2019/02/wordpress-forminator-persistent-xss-blind-sql-injection/'  # TODO: No CVE identifier
+    cve: 'https://security-consulting.icu/blog/2019/02/wordpress-forminator-persistent-xss-blind-sql-injection/'  # TODO: CVE identifiers requested 2019-03-04 #650685
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
