--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2660,3 +2660,11 @@ WordPress plugin forminator:
     cve: 'https://security-consulting.icu/blog/2019/02/wordpress-forminator-persistent-xss-blind-sql-injection/ https://nvd.nist.gov/vuln/detail/CVE-2019-9567 https://nvd.nist.gov/vuln/detail/CVE-2019-9568'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin quiz-master-next:
+  1:
+    location: ['/wp-content/plugins/quiz-master-next/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://security-consulting.icu/blog/2019/02/wordpress-quiz-and-survey-master-xss/ https://lists.openwall.net/full-disclosure/2019/02/05/5'  # TODO: CVE requested 2019-03-05
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
