--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2676,3 +2676,11 @@ WordPress plugin blog2social:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9576 https://security-consulting.icu/blog/2019/02/wordpress-blog2social-xss/ https://lists.openwall.net/full-disclosure/2019/02/05/6'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-postratings:
+  1:
+    location: ['/wp-content/plugins/wp-postratings/readme.txt']
+    secure_version: '0.8.9.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-6726 https://lists.openwall.net/full-disclosure/2019/03/09/2'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
