--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1052,7 +1052,7 @@ WordPress plugin contact-form-to-email:
     location: ['/wp-content/plugins/contact-form-to-email/readme.txt']
     secure_version: '1.2.66'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/7 https://security-consulting.icu/blog/2019/02/wordpress-contact-form-email-xss-csrf/'  # TODO: CVE requested 2019-03-10
+    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/7 https://security-consulting.icu/blog/2019/02/wordpress-contact-form-email-xss-csrf/'  # TODO: CVE requested 2019-03-10 #654291
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin code-snippets:
