--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2706,6 +2706,6 @@ WordPress plugin font-organizer:
     location: ['/wp-content/plugins/font-organizer/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/8'  # TODO: CVE requested 2019-03-18
+    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/8'  # TODO: CVE requested 2019-03-18 #658612
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
