Add external references

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2707,7 +2707,7 @@ WordPress plugin font-organizer:
     location: ['/wp-content/plugins/font-organizer/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/8'  # TODO: CVE requested 2019-03-18 #658612
+    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/8 https://security-consulting.icu/blog/2019/02/wordpress-font-organizer-xss/'  # TODO: CVE requested 2019-03-18 #658612
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin give:
@@ -2715,7 +2715,7 @@ WordPress plugin give:
     location: ['/wp-content/plugins/give/readme.txt']
     secure_version: '2.3.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/9'  # TODO: CVE requested 2019-03-18
+    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/9 https://security-consulting.icu/blog/2019/02/wordpress-give-xss/'  # TODO: CVE requested 2019-03-18
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin kingcomposer:
@@ -2723,6 +2723,6 @@ WordPress plugin kingcomposer:
     location: ['/wp-content/plugins/kingcomposer/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/11'  # TODO: CVE requested 2019-03-18
+    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/11 https://security-consulting.icu/blog/2019/02/wordpress-kingcomposer-xss/'  # TODO: CVE requested 2019-03-18
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
