--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2726,3 +2726,11 @@ WordPress plugin kingcomposer:
     cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/11 https://security-consulting.icu/blog/2019/02/wordpress-kingcomposer-xss/'  # TODO: CVE requested 2019-03-18
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin social-networks-auto-poster-facebook-twitter-g:
+  1:
+    location: ['/wp-content/plugins/social-networks-auto-poster-facebook-twitter-g/readme.txt']
+    secure_version: '4.2.8'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/12 https://security-consulting.icu/blog/2019/02/wordpress-social-networks-auto-poster-xss/'  # TODO: CVE requested 2019-03-18
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
