--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2735,3 +2735,11 @@ WordPress plugin social-networks-auto-poster-facebook-twitter-g:
     cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/12 https://security-consulting.icu/blog/2019/02/wordpress-social-networks-auto-poster-xss/'  # TODO: CVE requested 2019-03-18
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin yop-poll:
+  1:
+    location: ['/wp-content/plugins/yop-poll/readme.txt']
+    secure_version: '6.0.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/15 https://security-consulting.icu/blog/2019/02/wordpress-yop-poll-xss/'  # TODO: CVE requested 2019-03-18
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
