--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2743,3 +2743,11 @@ WordPress plugin yop-poll:
     cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/15 https://security-consulting.icu/blog/2019/02/wordpress-yop-poll-xss/'  # TODO: CVE requested 2019-03-18
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin woocommerce-abandoned-cart:
+  1:
+    location: ['/wp-content/plugins/woocommerce-abandoned-cart/readme.txt']
+    secure_version: '5.2.0'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://www.wordfence.com/blog/2019/03/xss-flaw-in-abandoned-cart-plugin-leads-to-wordpress-site-takeovers/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
