--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2764,6 +2764,6 @@ WordPress plugin social-warfare:
     location: ['/wp-content/plugins/social-warfare/readme.txt']
     secure_version: '3.5.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.cybersecurity-help.cz/vdb/SB2019032105 https://blog.sucuri.net/2019/03/zero-day-stored-xss-in-social-warfare.html https://www.wordfence.com/blog/2019/03/unpatched-zero-day-vulnerability-in-social-warfare-plugin-exploited-in-the-wild/ https://www.pluginvulnerabilities.com/2019/03/21/full-disclosure-of-settings-change-persistent-cross-site-scripting-xss-vulnerability-in-social-warfare/ https://threatpost.com/wordpress-plugin-removed-after-zero-day-discovered/143051/'  # TODO: CVE requested 2019-03-24
+    cve: 'https://www.cybersecurity-help.cz/vdb/SB2019032105 https://blog.sucuri.net/2019/03/zero-day-stored-xss-in-social-warfare.html https://www.wordfence.com/blog/2019/03/unpatched-zero-day-vulnerability-in-social-warfare-plugin-exploited-in-the-wild/ https://www.pluginvulnerabilities.com/2019/03/21/full-disclosure-of-settings-change-persistent-cross-site-scripting-xss-vulnerability-in-social-warfare/ https://threatpost.com/wordpress-plugin-removed-after-zero-day-discovered/143051/'  # TODO: CVE requested 2019-03-24 with ID #661794
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
