--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -86,19 +86,21 @@
 # https://drupal.org/SA-CORE-2018-005   CVE-2018-14773  8.5.6
 # https://drupal.org/SA-CORE-2019-001   CVE-2019-6338   8.6.6/8.5.9/7.62
 # https://drupal.org/SA-CORE-2019-002   CVE-2019-6339   8.6.6/8.5.9/7.62
+# https://drupal.org/SA-CORE-2019-003   CVE-2019-6340   8.6.10/8.5.11
+# https://drupal.org/SA-CORE-2019-004   CVE-2019-6341   8.6.13/8.5.14/7.65
 Drupal 8:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '8.6.6'
+    secure_version: '8.6.13'
     regexp: ["  const VERSION = '(?P<version>[0-9.]+)"]
-    cve: 'https://drupal.org/SA-CORE-2019-001 https://nvd.nist.gov/vuln/detail/CVE-2019-6338 ttps://drupal.org/SA-CORE-2019-002 https://nvd.nist.gov/vuln/detail/CVE-2019-6339'
+    cve: 'https://drupal.org/SA-CORE-2019-004 https://nvd.nist.gov/vuln/detail/CVE-2019-6341'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 7:
   1:
     location: ['/includes/bootstrap.inc']
-    secure_version: '7.62'
+    secure_version: '7.65'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2019-001 https://nvd.nist.gov/vuln/detail/CVE-2019-6338 ttps://drupal.org/SA-CORE-2019-002 https://nvd.nist.gov/vuln/detail/CVE-2019-6339'
+    cve: 'https://drupal.org/SA-CORE-2019-004 https://nvd.nist.gov/vuln/detail/CVE-2019-6341'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
