--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2776,3 +2776,11 @@ WordPress plugin wp-photo-album-plus:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-3647 https://www.htbridge.com/advisory/HTB23257'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin contact-form-builder:
+  1:
+    location: ['/wp-content/plugins/contact-form-builder/readme.txt']
+    secure_version: '1.0.69'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://lists.openwall.net/full-disclosure/2019/04/23/1'  # CVE requested 2019-04-26
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
