--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2785,3 +2785,11 @@ WordPress plugin contact-form-builder:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-11557 https://lists.openwall.net/full-disclosure/2019/04/23/1'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin contact-form-maker:
+  1:
+    location: ['/wp-content/plugins/contact-form-maker/readme.txt']
+    secure_version: '1.13.5'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://lists.openwall.net/full-disclosure/2019/04/05/12'  # CVE requested 2019-04-28
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
