Added support for MediaWiki 1.33

--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -137,6 +137,14 @@
 # CVE-2019-12473 1.32.2/1.31.2/1.30.2/1.27.6 https://lists.wikimedia.org/pipermail/wikitech-l/2019-June/092152.html
 # CVE-2019-12474 1.32.2/1.31.2/1.30.2/1.27.6 https://lists.wikimedia.org/pipermail/wikitech-l/2019-June/092152.html
 # CVE-2019-16738 1.33.1/1.32.4/1.31.4 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-October/000236.html https://phabricator.wikimedia.org/T230402
+MediaWiki 1.33:
+  1:
+    location: ['/includes/DefaultSettings.php']
+    secure_version: '1.33.1'
+    regexp: ['\$wgVersion.*?(?P<version>1\.33\.[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-16738 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-October/000236.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 MediaWiki 1.32:
   1:
     location: ['/includes/DefaultSettings.php']
