MediaWiki releases fix for incomplete fix

--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -137,6 +137,7 @@
 # CVE-2019-12473 1.32.2/1.31.2/1.30.2/1.27.6 https://lists.wikimedia.org/pipermail/wikitech-l/2019-June/092152.html
 # CVE-2019-12474 1.32.2/1.31.2/1.30.2/1.27.6 https://lists.wikimedia.org/pipermail/wikitech-l/2019-June/092152.html
 # CVE-2019-16738 1.33.1/1.32.4/1.31.4 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-October/000236.html https://phabricator.wikimedia.org/T230402
+# TODO 1.32.5/1.31.5 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-October/000238.html Asked MediaWiki (Sam Reed) if they requested CVE for incomplete fix
 MediaWiki 1.33:
   1:
     location: ['/includes/DefaultSettings.php']
@@ -148,17 +149,17 @@ MediaWiki 1.33:
 MediaWiki 1.32:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.32.4'
+    secure_version: '1.32.5'
     regexp: ['\$wgVersion.*?(?P<version>1\.32\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-16738 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-October/000236.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-October/000238.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.31:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.31.4'
+    secure_version: '1.31.5'
     regexp: ['\$wgVersion.*?(?P<version>1\.31\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-16738 https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-October/000236.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2019-October/000238.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.30:
